// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`file group strategy with multi-props object as query parameter > method file 1`] = `
{
    "__index": "export * as PostApi from "./post";
",
    "post": "import { z } from "zod";
// Zod Schemas
export const req = z
  .object({ prop1: z.number().int(), prop2: z.number().int() })
  .strict();
// Endpoints
export const endpoints = [
  {
    method: "post",
    path: "/api/v1/test",
    requestFormat: "json",
    parameters: [
      {
        name: "req",
        type: "Query",
        schema: req,
      },
    ],
    response: z.void(),
    errors: [],
    responses: {
      200: {
        schema: z.void(),
        description: "OK",
      },
    },
    request: {
      queryParams: z.object({ req: req }),
    },
    alias: "postApiV1Test",
  },
] as const;
// MCP Tools
export const mcpTools = [
  {
    tool: {
      name: "post_api_v_1_test",
      description: "POST /api/v1/test",
      inputSchema: {
        type: "object",
        properties: {
          query: {
            type: "object",
            properties: {
              req: {
                type: "object",
                properties: {
                  prop1: {
                    type: "integer",
                  },
                  prop2: {
                    type: "integer",
                  },
                },
                required: ["prop1", "prop2"],
              },
            },
            required: ["req"],
          },
        },
        required: ["query"],
      },
      annotations: {
        readOnlyHint: false,
        destructiveHint: false,
        idempotentHint: false,
      },
    },
    httpOperation: {
      method: "post",
      path: "/api/v1/test",
      originalPath: "/api/v1/test",
    },
    security: {
      isPublic: true,
      usesGlobalSecurity: false,
      requirementSets: [],
    },
  },
] as const;
",
}
`;

exports[`file group strategy with multi-props object as query parameter > tag file 1`] = `
{
    "Default": "import { z } from "zod";
// Zod Schemas
export const req = z
  .object({ prop1: z.number().int(), prop2: z.number().int() })
  .strict();
// Endpoints
export const endpoints = [
  {
    method: "post",
    path: "/api/v1/test",
    requestFormat: "json",
    parameters: [
      {
        name: "req",
        type: "Query",
        schema: req,
      },
    ],
    response: z.void(),
    errors: [],
    responses: {
      200: {
        schema: z.void(),
        description: "OK",
      },
    },
    request: {
      queryParams: z.object({ req: req }),
    },
    alias: "postApiV1Test",
  },
] as const;
// MCP Tools
export const mcpTools = [
  {
    tool: {
      name: "post_api_v_1_test",
      description: "POST /api/v1/test",
      inputSchema: {
        type: "object",
        properties: {
          query: {
            type: "object",
            properties: {
              req: {
                type: "object",
                properties: {
                  prop1: {
                    type: "integer",
                  },
                  prop2: {
                    type: "integer",
                  },
                },
                required: ["prop1", "prop2"],
              },
            },
            required: ["req"],
          },
        },
        required: ["query"],
      },
      annotations: {
        readOnlyHint: false,
        destructiveHint: false,
        idempotentHint: false,
      },
    },
    httpOperation: {
      method: "post",
      path: "/api/v1/test",
      originalPath: "/api/v1/test",
    },
    security: {
      isPublic: true,
      usesGlobalSecurity: false,
      requirementSets: [],
    },
  },
] as const;
",
    "__index": "export * as DefaultApi from "./Default";
",
}
`;
